# hyprfoil

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
docs/: package.json  pnpm-lock.yaml
